macros/tests/ui/field_invalid_rename_all.rs
use axum_typed_multipart::TryFromField;

#[derive(TryFromField)]
#[try_from_field(rename_all = "invalid_case")]
enum Data {
    Variant,
}

fn main() {}
